@@ -23,14 +23,14 @@ class GrContext;
 class GrRenderTargetContext;
 
 DEF_SIMPLE_GPU_GM_CAN_FAIL(cross_context_image, context, rtc, canvas, errorMsg,
-                           5 * 256 + 60, 256 + 128 + 30) {
+                           3 * 256 + 40, 256 + 128 + 30) {
     sk_sp<SkData> encodedData = GetResourceAsData("images/mandrill_256.png");
     if (!encodedData) {
         *errorMsg = "Could not load mandrill_256.png. Did you forget to set the resourcePath?";
         return skiagm::DrawResult::kFail;
     }
 
-    sk_sp<SkImage> images[5];
+    sk_sp<SkImage> images[3];
     images[0] = SkImage::MakeFromEncoded(encodedData);
 
     SkBitmap bmp;
@@ -38,10 +38,8 @@ DEF_SIMPLE_GPU_GM_CAN_FAIL(cross_context_image, context, rtc, canvas, errorMsg,
     SkAssertResult(images[0]->asLegacyBitmap(&bmp) &&
                    bmp.peekPixels(&pixmap));
 
-    images[1] = SkImage::MakeCrossContextFromEncoded(context, encodedData, false, nullptr);
-    images[2] = SkImage::MakeCrossContextFromEncoded(context, encodedData, true, nullptr);
-    images[3] = SkImage::MakeCrossContextFromPixmap(context, pixmap, false, nullptr);
-    images[4] = SkImage::MakeCrossContextFromPixmap(context, pixmap, true, nullptr);
+    images[1] = SkImage::MakeCrossContextFromPixmap(context, pixmap, false);
+    images[2] = SkImage::MakeCrossContextFromPixmap(context, pixmap, true);
 
     canvas->translate(10, 10);
 
