@@ -315,35 +315,6 @@ public:
                                           TextureReleaseProc textureReleaseProc,
                                           ReleaseContext releaseContext);
 
-    /** Creates SkImage from encoded data. SkImage is uploaded to GPU back-end using context.
-
-        Created SkImage is available to other GPU contexts, and is available across thread
-        boundaries. All contexts must be in the same GPU share group, or otherwise
-        share resources.
-
-        When SkImage is no longer referenced, context releases texture memory
-        asynchronously.
-
-        GrBackendTexture decoded from data is uploaded to match SkSurface created with
-        dstColorSpace. SkColorSpace of SkImage is determined by encoded data.
-
-        SkImage is returned if format of data is recognized and supported, and if context
-        supports moving resources. Recognized formats vary by platform and GPU back-end.
-
-        SkImage is returned using MakeFromEncoded() if context is nullptr or does not support
-        moving resources between contexts.
-
-        @param context                GPU context
-        @param data                   SkImage to decode
-        @param buildMips              create SkImage as mip map if true
-        @param dstColorSpace          range of colors of matching SkSurface on GPU
-        @param limitToMaxTextureSize  downscale image to GPU maximum texture size, if necessary
-        @return                       created SkImage, or nullptr
-    */
-    static sk_sp<SkImage> MakeCrossContextFromEncoded(GrContext* context, sk_sp<SkData> data,
-                                                      bool buildMips, SkColorSpace* dstColorSpace,
-                                                      bool limitToMaxTextureSize = false);
-
     /** Creates SkImage from pixmap. SkImage is uploaded to GPU back-end using context.
 
         Created SkImage is available to other GPU contexts, and is available across thread
@@ -370,8 +341,14 @@ public:
         @return                       created SkImage, or nullptr
     */
     static sk_sp<SkImage> MakeCrossContextFromPixmap(GrContext* context, const SkPixmap& pixmap,
-                                                     bool buildMips, SkColorSpace* dstColorSpace,
+                                                     bool buildMips,
                                                      bool limitToMaxTextureSize = false);
+
+    static sk_sp<SkImage> MakeCrossContextFromPixmap(GrContext* context, const SkPixmap& pixmap,
+                                                     bool buildMips, SkColorSpace*,
+                                                     bool limitToMaxTextureSize = false) {
+        return MakeCrossContextFromPixmap(context, pixmap, buildMips, limitToMaxTextureSize);
+    }
 
     /** Creates SkImage from backendTexture associated with context. backendTexture and
         returned SkImage are managed internally, and are released when no longer needed.
