@@ -30,6 +30,9 @@ Milestone 78
  * Add SkCodec::SelectionPolicy for distinguishing between decoding a still image
    or an image sequence for a container format that has both (e.g. HEIF).
 
-* SkImage::makeTextureImage no longer takes an SkColorSpace parameter. It was unused.
+* SkImage::makeTextureImage and SkImage::MakeCrossContextFromPixmap no longer take an
+  SkColorSpace parameter. It was unused.
 
 * SkImage::reinterpretColorSpace - to reinterpret image contents in a new color space.
+
+* Removed SkImage::MakeCrossContextFromEncoded.
